eatery almost done v13

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
       .link-underline {
         text-decoration: underline;
       }
+
     </style>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -85,7 +86,7 @@
         /></span>
       </div>
       <div class="w3-display-bottomleft w3-center w3-padding-large">
-        <span class="w3-text-white">Vennila 🔗 Sathrukkan</span>
+        <span class="w3-tag w3-brown" style="opacity: 0.7;"><span class="w3-text-white" style="opacity: 1;">Vennila 🔗 Sathrukkan</span></span>
       </div>
       <div class="w3-display-bottomright w3-center w3-padding-large">
         <span class="w3-text-white">Sunday, 15 May</span><br />
@@ -102,7 +103,7 @@
             <span class="w3-tag w3-wide">ABOUT MADURAI</span>
           </h1>
           <p style="text-align: justify;">
-            The medieval city of Madurai was the capital city in the Pandiyan kingdom and is now known for its historical monuments like Meenakshi Amman temple and Thirumalai nayakar mahal. The Meenakshi amman temple complex acted as the town centre during the Pandiyan reign and is now geographically and culturally situated at the heart of the city. Being a city with a healthy mix of ancient and the new, Madurai gives an unique experience to its visitors. 
+            The medieval city of Madurai was the capital city in the Pandiyan kingdom and is now known for its historical monuments like Meenakshi Amman temple and Thirumalai Nayakar mahal. The Meenakshi Amman temple complex acted as the town centre during the Pandiyan reign and is now geographically and culturally situated at the heart of the city. Being a city with a healthy mix of ancient and the new, Madurai gives an unique experience to its visitors. 
             <br />
             <br />
 This blog aims to give you suggestions on how you can make your stay a memorable one. As you are visiting Madurai in the mid of May, you can explore things from Mango to Jackfruit, from the scorching heat to a cold glass of Jigarthanda. Here is the list of things that we recommend you to do(places to eat and wander) in and around Madurai. 
@@ -163,7 +164,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         <p class="w3-text-grey">Jackfruit, boiled peanuts, thennanguruthu(coconut stem), green mangoes, Saurashtra vada vendors (try mullumurugai vadai or Poli)etc.,
 </p>
         <p>Location</p>
-        <p class="w3-text-grey">You can find a number of such vendors on a walk(15 - 20 mins) from Meenakshi Amman temple (from pudhu mandapam) to Thirumalai nayakar mahal.</p>
+        <p class="w3-text-grey">You can find a number of such vendors on a walk(15 - 20 mins) from Meenakshi Amman temple (from pudhu mandapam) to Thirumalai Nayakar mahal.</p>
     </div>
         <br />
             <!-- Jigarthanda container -->
@@ -218,7 +219,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
     <div class="w3-panel w3-leftbar w3-border-grey">
       <h3>Meenakshi Amman temple prasadam</h3>
       <p class="w3-text-grey">
-        Meenakshi amman temple snack bar is known for the variety of snacks that it offers.  <br />
+        Meenakshi Amman temple snack bar is known for the variety of snacks that it offers.  <br />
         <p>When to visit?</p>
         <p class="w3-text-grey">
           During the temple operation hours.
@@ -454,7 +455,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <div class="w3-row w3-center w3-card w3-padding">
           <div class="w3-left-align" style="text-align: justify;">
           <h3><b>Meenakshi Amman Temple area</b></h3>
-          <span class="material-icons"> schedule </span>
+          <span class="material-icons w3-text-grey"> schedule </span>
               <span class="w3-text-grey"
                 >Recommended time : after 5pm. would take around 2-3 hours
               </span>
@@ -474,7 +475,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
                 <li>Snack stall - Ask temple employee for directions</li>
                 <li>Pudhu mandapam - Outside the complex - sells things like craft goods, tunics, cheap ornaments etc.,</li>
                 <li>Walk along the chithirai streets(vehicle free area)</li>
-                <li>Refer to street food section for food suggestions and consider a walk to Thirumalai nayakar mahal</li>
+                <li>Refer to street food section for food suggestions and consider a walk to Thirumalai Nayakar mahal</li>
               </ul>
           </p>
             </div>
@@ -486,7 +487,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <div class="w3-row w3-center w3-card w3-padding">
           <div class="w3-left-align" style="text-align: justify;">
           <h3><b>Azhagar kovil area</b></h3>
-          <span class="material-icons"> schedule </span>
+          <span class="material-icons w3-text-grey"> schedule </span>
               <span class="w3-text-grey"
               > 4-5 hours including the journey from Madurai(Early mornings recommended)
               </span>
@@ -517,7 +518,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <div class="w3-row w3-center w3-card w3-padding">
           <div class="w3-left-align" style="text-align: justify;">
           <h3><b>Thirumalai Nayakkar mahal</b></h3>
-          <span class="material-icons"> schedule </span>
+          <span class="material-icons w3-text-grey"> schedule </span>
               <span class="w3-text-grey"
               > 9 am - 8:30 pm (breaks 1-1:30 pm, 5-6 pm)
               </span>
@@ -541,7 +542,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <div class="w3-row w3-center w3-card w3-padding">
           <div class="w3-left-align" style="text-align: justify;">
           <h3><b>Thiruparankundram</b></h3>
-          <span class="material-icons"> schedule </span>
+          <span class="material-icons w3-text-grey"> schedule </span>
               <span class="w3-text-grey"
               > 8 am - 12:30 pm and 4:00 - 7:30 pm
               </span>
@@ -561,7 +562,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <div class="w3-row w3-center w3-card w3-padding">
           <div class="w3-left-align" style="text-align: justify;">
           <h3><b>Mariamman Teppakulam</b></h3>
-          <span class="material-icons"> schedule </span>
+          <span class="material-icons w3-text-grey"> schedule </span>
               <span class="w3-text-grey"
               > 9:00 am - 6:00 pm
               </span>
@@ -583,7 +584,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         <h3><b>Gandhi Museum - Eco Park - Rajaji Park</b></h3>
         <br />
         <!--Gandhi Museum container-->
-        <div class="w3-container">
+        <div class="w3-container w3-text-grey">
             <h4>Gandhi Museum</h4>
             <span class="material-icons"> schedule </span><span class="w3-text-grey"
             > 10:00 am - 1:00 pm and 2:00 - 5:45 pm (closed on Sundays)
@@ -592,14 +593,14 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         <br />
         <br />
         <p>
-          Gandhi museum, which is situated nearby is a place of historic significance, comes under the Peace Museums Worldwide selected by the United Nations Organisation (UNO).
+          Gandhi museum is a place of historic significance, comes under the Peace Museums Worldwide selected by the United Nations Organisation (UNO).
           </p>
         <br />
       </div>
       <!--Eco Park container-->
         <div class="w3-container">
           <h4>Eco Park</h4>
-            <span class="material-icons"> schedule </span><span class="w3-text-grey"
+            <span class="material-icons w3-text-grey"> schedule </span><span class="w3-text-grey"
             > 4 - 9 am and 5 - 8:30 pm
             </span>
       <img src="static/madurai-corporation-eco-park.webp" alt="Gandhi-museum" style="width:100%">
@@ -614,7 +615,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         <!--Children's Park container-->
         <div class="w3-container">
           <h4>Rajaji Park</h4>
-            <span class="material-icons"> schedule </span><span class="w3-text-grey"
+            <span class="material-icons w3-text-grey"> schedule </span><span class="w3-text-grey"
             > 10am - 8:30pm
             </span>
       <img src="static/rjaji-park-madurai.webp" alt="Gandhi-museum" style="width:100%">
@@ -638,7 +639,14 @@ This blog aims to give you suggestions on how you can make your stay a memorable
     <br />
 
       <!-- Wedding Container -->
-      
+      <div class="w3-container"  id="wedding">
+        <div class="w3-content"style="max-width: 700px;">
+          <h1 class="w3-center w3-padding-64">
+            <span class="w3-tag w3-wide">The Wedding</span>
+          </h1>
+
+        </div>
+      </div>
       <!-- End page content -->
     </div>
 
