eatery almost done v14

--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
     <!-- Header with image -->
     <header class="bgimg w3-display-container w3-grayscale-min" id="home">
       <div class="w3-display-middle w3-center">
-        <span class="w3-text-white" style="font-size: 5em"
+        <span class="w3-text-white" style="font-size: 5em; opacity: 0.8;"
           >THE<br />TEMPLE<br />TOWN<br />WEDDING<br
         /></span>
       </div>
       <div class="w3-display-bottomleft w3-center w3-padding-large">
-        <span class="w3-tag w3-brown" style="opacity: 0.7;"><span class="w3-text-white" style="opacity: 1;">Vennila 🔗 Sathrukkan</span></span>
+        <span class="w3-tag w3-brown" style="opacity: 1;"><h4 class="w3-text-white" style="opacity: 1;">Vennila 🔗 Sathrukkan</h4></span>
       </div>
       <div class="w3-display-bottomright w3-center w3-padding-large">
         <span class="w3-text-white">Sunday, 15 May</span><br />
@@ -102,7 +102,7 @@
           <h1 class="w3-center w3-padding-64">
             <span class="w3-tag w3-wide">ABOUT MADURAI</span>
           </h1>
-          <p style="text-align: justify;">
+          <p class="w3-text-grey" style="text-align: justify;">
             The medieval city of Madurai was the capital city in the Pandiyan kingdom and is now known for its historical monuments like Meenakshi Amman temple and Thirumalai Nayakar mahal. The Meenakshi Amman temple complex acted as the town centre during the Pandiyan reign and is now geographically and culturally situated at the heart of the city. Being a city with a healthy mix of ancient and the new, Madurai gives an unique experience to its visitors. 
             <br />
             <br />
@@ -124,7 +124,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <h1 class="w3-center w3-padding-48">
             <span class="w3-tag w3-wide">Places to eat</span>
           </h1>
-          <p>Welcome to the city that never sleeps(but don’t expect a nightlife). As the name suggests, there is no time when you can’t find a nice place for a cup of tea or a hot plate of parotta. Below is an extensive list of eateries that serve sumptuous food.</p>
+          <p class="w3-text-grey">Welcome to the city that never sleeps(but don’t expect a nightlife). As the name suggests, there is no time when you can’t find a nice place for a cup of tea or a hot plate of parotta. Below is an extensive list of eateries that serve sumptuous food.</p>
 
           <div class="w3-row w3-center w3-card w3-padding">
             <a
@@ -336,8 +336,8 @@ This blog aims to give you suggestions on how you can make your stay a memorable
                 the “what to buy” section instead.
               </p>
               <span class="material-icons"> place </span>
-              <a class="link-underline" href="https://goo.gl/maps/"
-                >take me there - link broken!
+              <a class="link-underline" href="https://maps.google.com/maps?saddr=&daddr=Alagar+Koil+Main+Road+Tallakulam+KK+Nagar+opp.+to+District+Court%2C+Madurai+625002+India@9.93749,78.13742"
+                >take me there!
               </a>
             </div>
           </div>
@@ -463,13 +463,13 @@ This blog aims to give you suggestions on how you can make your stay a memorable
               
           <br />
           <br />
-          <p>
+          <p class="w3-text-grey">
             Though it's a bit crowded, we recommend you to visit in the evening to experience the bustling life of the city. The streets around the temple are named after the month names of the Tamil calendar, starting with chithirai.
             </br />
             <br />  
             Don’t forget to visit these following places when you visit the temple:
  
-              <ul class="w3-ul">
+              <ul class="w3-ul w3-text-grey">
                 <li>Aayiram kaal mandapam - Located after entering through the west gate</li>
                 <li>Pond - Located in the westside inside the temple</li>
                 <li>Snack stall - Ask temple employee for directions</li>
@@ -483,7 +483,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
       <br />
 
       <!-- Temple container ends-->
-              <!-- Azhgar Koyil area container-->
+           <!-- Azhgar Koyil area container-->
           <div class="w3-row w3-center w3-card w3-padding">
           <div class="w3-left-align" style="text-align: justify;">
           <h3><b>Azhagar kovil area</b></h3>
@@ -494,21 +494,22 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         <img src="static/azhagar-kovil.jpeg" alt="Azhagar temple" style="width:100%">
           <br />
           <br />
-          <p>
+          <p class="w3-text-grey">
            you could start as early as 5 in the morning to enjoy a trek in the hills.
            <br />
             <br />  
            Things to see:
               <br />
-              <ul class="w3-ul">
+              <ul class="w3-ul w3-text-grey">
                 <li>Kall azhagar temple located at the base of the hill</li>
                 <li>Pazhamudhir cholai(Murugan temple) on top of the hill</li>
                 <li>a few monkeys</li>
                 <li>Stop for a snack or lunch at Hawa valley(20 min detour)</li>
               </ul>
               <br />
-                If you have more time to spend, visit hotel kadambavanam (It has a good view) or drive to Sirumalai
-          </p>
+              <span class="w3-text-grey">  If you have more time to spend, visit hotel kadambavanam (It has a good view) or drive to Sirumalai
+              </span>
+              </p>
             </div>
       </div>
       <br />
@@ -525,7 +526,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         <img src="static/tirumalai-nayakar.jpeg" alt="mahal" style="width:100%">
           <br />
           <br />
-          <p>
+          <p class="w3-text-grey">
             This architectural wonder is another important historic site that was constructed in the early 17th century. The huge darbar halls with humongous pillars is a pleasure to watch. Director Maniratnam has patronised this place and has featured it in such movies as Guru, Bombay and Iruvar.
             The sound and light show is recommended. <strong>We would suggest you to wear mosquito repellents.</strong>    
           </p>
@@ -549,7 +550,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         <img src="static/thiruparankundram.jpeg" alt="mahal" style="width:100%">
           <br />
           <br />
-          <p>
+          <p class="w3-text-grey">
             The temple is built in rock-cut architecture and believed to have been built by the Pandyas during the 6th century.
           </p>
 
@@ -569,7 +570,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         <img src="static/mariamman-teppakulam.jpeg" alt="mahal" style="width:100%">
           <br />
           <br />
-          <p>
+          <p class="w3-text-grey">
             The largest Tank in Tamil Nadu. Take a boat ride to the temple surrounded by water and savour the street food alongside. 
             </p>
 
@@ -584,7 +585,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
         <h3><b>Gandhi Museum - Eco Park - Rajaji Park</b></h3>
         <br />
         <!--Gandhi Museum container-->
-        <div class="w3-container w3-text-grey">
+        <div class="w3-container">
             <h4>Gandhi Museum</h4>
             <span class="material-icons"> schedule </span><span class="w3-text-grey"
             > 10:00 am - 1:00 pm and 2:00 - 5:45 pm (closed on Sundays)
@@ -592,7 +593,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
       <img src="static/gandhi-museum.jpeg" alt="Gandhi-museum" style="width:100%">
         <br />
         <br />
-        <p>
+        <p class="w3-text-grey">
           Gandhi museum is a place of historic significance, comes under the Peace Museums Worldwide selected by the United Nations Organisation (UNO).
           </p>
         <br />
@@ -606,7 +607,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
       <img src="static/madurai-corporation-eco-park.webp" alt="Gandhi-museum" style="width:100%">
         <br />
         <br />
-        <p>
+        <p class="w3-text-grey">
           You can have a brisk morning walk or have a relaxed evening stroll in Eco park(Very close to the wedding venue). 
           There are two enterences one close to The court and the other close to the wedding venue
         </p>
@@ -621,7 +622,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
       <img src="static/rjaji-park-madurai.webp" alt="Gandhi-museum" style="width:100%">
         <br />
         <br />
-        <p>
+        <p class="w3-text-grey">
           A children’s park with slides and rides
         </p>
         <br />
@@ -644,7 +645,25 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <h1 class="w3-center w3-padding-64">
             <span class="w3-tag w3-wide">The Wedding</span>
           </h1>
-
+          <p>
+            We hope the blog makes your stay at Madurai better. But, let’s not forget the event in hand. We invite you, wholeheartedly, to the wedding
+          </p>
+          <br />
+          <ul>
+            <li>Of: Vennila</li>
+            <li>with: Sathrukkan</li>
+            <li>Venue:Vaigai Hall, Fortune Pandiyan hotel</li>
+            <li>Time: May 15 9AM, 2022</li>
+          </ul>
+          <span class="material-icons w3-text-grey"> place </span>
+          <a class="link-underline w3-text-grey" href="https://bit.ly/3L3jijx"
+            >I'm dressed up for the wedding. take me to the venue!
+          </a><br />
+          <p class="w3-text-grey">Note: There is only one event, that is the wedding itself and no reception. So we sincerely hope you can make it there with your family !</p>
+          <br /><br />
+          <p class="w3-text-grey"><a class="link-underline" href="static/Vennila-Sathrukkan.pdf"
+            >Download e-invite!
+          </a></p>
         </div>
       </div>
       <!-- End page content -->
