eatery almost done v15

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>Temple Town Wedding</title>
+    <meta name="description" content="An informal guide to Madurai and a formal wedding invite!" />
+    <meta property="og:title" content="Temple Town Wedding" />
+    <meta property="og:url" content="https://lastjedi.in" />
+    <meta property="og:description" content="An informal guide to Madurai and a formal wedding invite!" />
+    <meta property="og:image" content="static/meenakshi-amman-temple" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
