--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="description" content="An informal guide to Madurai and a formal wedding invite!" />
     <meta property="og:title" content="Temple Town Wedding" />
     <meta property="og:url" content="https://lastjedi.in" />
-    <meta property="og:description" content="An informal guide to Madurai and a formal wedding invite!" />
-    <meta property="og:image" content="static/meenakshi-amman-temple" />
+    <meta property="og:description" content="An informal guide to Madurai & a formal invite! invite!" />
+    <meta property="og:image" content="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSW_sqSGoI101q7zy_B3Mg9QjT1no7q1xnOAw&usqp=CAU" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
