--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       .bgimg {
         background-position: top;
         background-size: cover;
-        background-image: url("static/meenakshi-amman-temple.png");
+        background-image: url("static/meenakshi-amman-temple-15.jpeg");
         min-height: 80%;
       }
 
