--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Temple Town Wedding</title>
+    <link rel="icon" type="image/x-icon" href="static/NeoHorizonIcon.png">
     <meta name="description" content="An informal guide to Madurai and a formal wedding invite!" />
     <meta property="og:title" content="Temple Town Wedding" />
     <meta property="og:url" content="https://lastjedi.in" />
@@ -690,6 +691,14 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           class="w3-hover-text-green"
           >The Last Jedis</a
         >
+      </p>
+      <p>
+        Powered by
+        <a 
+          href="mailto:hello@neohorizon.io"
+          class="w3-hover-text-green"
+          ><img style="max-width: 24px; vertical-align: text-bottom; display: inline-flex;" src="static/NeoHorizonIcon.png"
+          > NeoHorizon Analytics</a>
       </p>
     </footer>
 
