--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
           <h1 class="w3-center w3-padding-48">
             <span class="w3-tag w3-wide">Places to eat</span>
           </h1>
-          <p class="w3-text-grey">Welcome to the city that never sleeps(but don’t expect a nightlife). As the name suggests, there is no time when you can’t find a nice place for a cup of tea or a hot plate of parotta. Below is an extensive list of eateries that serve sumptuous food.</p>
+          <p class="w3-text-grey">Welcome to the city that never sleeps(but don’t expect a nightlife). As the name suggests, there is no time when you can’t find a nice place for a cup of tea or a hot plate of parotta. Below is an extensive list of eateries that serve delicious and distinct food.</p>
 
           <div class="w3-row w3-center w3-card w3-padding">
             <a
