--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@ This blog aims to give you suggestions on how you can make your stay a memorable
       <p>
         Authors
         <a
-          href="https://www.ottostore.com/"
+          href="EasterEgg/EasterEgg/games/wordle/index.html"
           class="w3-hover-text-green"
           >The Last Jedis</a
         >
@@ -748,7 +748,7 @@ var x = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("timer").innerHTML = "WE ARE MARRIED ALREADY! Find the easteregg";
   }
 }, 1000);
 </script>
